improved reset password logic
